<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="snap_button_label">Snap Geatte Now</string>
    <string name="pick_button_label">Pick From Gallery</string>
    <string name="app_name">Geatte</string>
    <string name="app_url">http://www.geatte.com</string>
    <string name="no_geattes">No Geattes Yet</string>
    <string name="empty_my_interests">No Interests Found. Start Creating Your Interest.</string>
    <string name="empty_friend_interests">No Interests Received From Friends. Invite More Friends To Join Geatte.</string>
    <string name="empty_list">No Interests Found! Contact Geatte Team For Help.</string>
    <string name="empty_album">No Image Found In The Path.</string>
    <string name="show_all_feedbacks">Show All Feedbacks</string>
    <string name="show_all_feedbacks_title">Feedbacks For My Interests</string>
    <string name="show_geattetab">GeatteTab</string>
    <string name="show_geattetab_loading">Loading...</string>
    <string name="show_item_feedback_title">Feedback</string>

    <string name="menu_delete">Delete Geatte</string>
	<string name="menu_add_more_geatte">Add more geatte</string>
	<string name="menu_get_next_page">Get next page</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_invite">Tell friends</string>
    
    <string name="edit_interest">Creating An Interest...</string>
    <string name="edit_top_label">Send A Geatte</string>
    <string name="edit_title_label">Caption:</string>
    <string name="edit_desc_label">More:</string>
    <string name="edit_image_label">Image:</string>
    <string name="edit_title_text_default">Enter Interest Caption</string>
    <string name="edit_desc_text_default">Enter More Desc</string>
    
    <string name="fi_resp_label">You Vote:</string>
    <string name="desc_label">More:</string>
    <string name="vote_label">Vote:</string>
    <string name="comment_label">Comment:</string>
    
    <string name="send_geatte_text">Send</string>
    <string name="send_to_text">To</string>
    <string name="send_to_reset_text">To</string>
    <string name="send_write_text">Write</string>
    
    <string name="register">Register</string>
    <string name="register_progress_text_conn">Connecting...</string>
    <string name="register_progress_text_reg">Registered</string>
    <string name="register_progress_text_unreg">Unregistered</string>
    <string name="register_progress_text_error">Error to register</string>
    
    <string name="upload_text_retry">Had problems to upload, please retry</string>
    <string name="upload_text_error">Error to upload geatte info</string>
    <string name="upload_image_error">Error to upload geatte image</string>
    <string name="upload_vote_error">Error to upload geatte vote</string>
    
    <string name="voting_yes">Great</string>
    <string name="voting_no">Lame</string>
    <string name="voting_maybe">Maybe</string>
    <string name="voting_comment">Write</string>
    <string name="voting_send">Vote</string>
    <string name="voting_choose_answer">Choose an answer first!</string>
    <string name="voting_a_geatte">Vote A Friend\'s Item</string>
    <string name="voting_comment_title">Write A Comment</string>
    <string name="voting_comment_text_default">Enter Comment</string>
    
    <string name="comment_cancel_text">Cancel</string>
    <string name="comment_ok_text">Ok</string>
    
    <string name="setup_back">Back</string>
    <string name="setup_next">Next</string>
    <string name="setup_finish">Finish</string>
    <string name="intro_exit">Exit</string>
	<string name="select_account_text">Select an account to use:</string>
	<string name="no_accounts">There are no accounts setup on this phone.</string>
	<string name="connect_error_text">Error: Unable to connect.</string>
	<string name="auth_error_text">Error: Google Apps accounts not supported.</string>
	<string name="select_account_click_next_text">Click Next to finish the setup of Geatte.</string>
	<string name="select_account_connecting_text">Connecting...</string>
	<string name="connected_with_account_text">Your phone is connected to Geatte using this account:</string>
	<string name="setup_complete_phone_missing_text">
		Geatte can not find your phone number from carrier\'s sin card, please enter below to continue:
	</string>
	<string name="setup_complete_edit_phone_example">Ex: 14081112233</string>
	
	<string name="contacts_view_name">Geatte Contacts</string>
	<string name="contacts_info_view_name">Who Is On Geatte</string>
    <string name="contacts_save">Save</string>

	<string name="contacts_send">Send</string>
    <string name="contacts_clean">Clean All</string>
    <string name="contacts_back">Save</string>
    
    <string name="tab_list">List View</string>
    <string name="tab_grid">Grid View</string>
    
    <string name="shopinion_mi">My</string>
    <string name="shopinion_fi">Friend\'s</string>
    <string name="shopinion_snap">Snap</string>
    <string name="shopinion_pick">Pick</string>
    <string name="shopinion_all">All</string>
    
    <!-- Introduction text at start of setup flow. Preserve occurrences of &lt;br>, &lt;a href="{tos_link}">, 
    &lt;a href="{pp_link}">, and &lt;a/> [CHAR LIMIT=NONE] -->
    <string name="intro_text">
        Geatte Is A Social Shopping App To Help You Make Decisions On The Go. 
        &lt;br>&lt;br> 
        Geatte provides a easy way to gather feedback from your circle of friends while you shop at stores.        
		Any contact from your phone book can be selected to vote on your wish-list item. Geatte voting 
		is a simple interface for you to vote friend\'s items in just two clicks. 
        &lt;br>&lt;br> 
        This setup is one time setup and needs your Google account for accessing Geatte service.
        After setup, you can start using Geatte to send out items you are interested to buy and make smart
        decision with feedback from family or friends you trust.
    </string>
    
    <string name="setup_complete_text">
        Congratulations! Geatte Setup Is Complete.  
        &lt;br>&lt;br>
        You can start using Geatte to ask feedback from your friends and family and also give your wise suggestions on friend\'s items.
    </string>
</resources>
