<?xml version="1.0" encoding="utf-8"?>
<greendroid.widget.ActionBarHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:greendroid="http://schemas.android.com/apk/res/com.geatte.android.app"
	android:id="@id/gd_action_bar_host"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<!--
		Layout height/width and background are set here. This is a hack to
		apply a default style to the ActionBar. Indeed, no style can be
		applied to a LinearLayout
	-->
	<greendroid.widget.ActionBar
		xmlns:actionBar="http://schemas.android.com/apk/res/com.geatte.android.app"
		android:id="@id/gd_action_bar"
		android:layout_height="@dimen/gd_action_bar_height"
		android:layout_width="fill_parent"
		android:background="?attr/gdActionBarBackground"
		actionBar:homeDrawable="@drawable/list" />

    <FrameLayout
		android:id="@id/gd_action_bar_content_view"
		android:layout_height="0dp"
		android:layout_width="fill_parent"
		android:layout_weight="1">

		<ImageView
			android:id="@id/voting_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:scaleType="centerInside"/>
			
		<greendroid.widget.AsyncImageView
			android:id="@id/voting_thumbnail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|right"
			greendroid:defaultSrc="@drawable/pause"/>

	</FrameLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@android:drawable/bottom_bar"
		android:paddingTop="1dp">

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/green_light"
			android:text="@string/voting_yes"
			android:onClick="onYes"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
			
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/warning"
			android:text="@string/voting_maybe"
			android:onClick="onMaybe"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/red_light"
			android:text="@string/voting_no"
			android:onClick="onNo"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/write"
			android:text="@string/voting_comment"
			android:onClick="onComment"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
			
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/send"
			android:text="@string/voting_send"
			android:onClick="onSend"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

	</LinearLayout>

</greendroid.widget.ActionBarHost>
