<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView
        android:id="@+id/select_account_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_account_text"
        android:textColor="#000000"
        android:layout_margin="5dip"/>
              
    <ListView
        android:id="@+id/select_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_account_text"
        android:layout_above="@+id/select_account_click_next_text"
        android:layout_margin="10dip"
        android:divider="#FFFFFF"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent">
    </ListView>

    <TextView
        android:id="@+id/select_account_click_next_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_account_click_next_text"
        android:textColor="#000000"
        android:layout_above="@+id/select_account_progress_bar"
        android:layout_margin="5dip"/>
    
    <ProgressBar android:id="@+id/select_account_progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select_account_connecting_text"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="0dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:visibility="invisible"/>
        
    <TextView
        android:id="@+id/select_account_connecting_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_account_connecting_text"
        android:textColor="#A0A0A0"
        android:layout_above="@+id/select_account_footer"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="10dip"
        android:visibility="invisible"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/select_account_footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FF707070">
        
        <Button
            android:id="@+id/select_account_back"
            android:text="@string/setup_back"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_btn_back"/>
    
        <Button
            android:id="@+id/select_account_next"
            android:text="@string/setup_next"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_btn_next"/>
            
    </LinearLayout>
    
</RelativeLayout>