<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/intro_scroll"
	    android:layout_alignParentTop="true" 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:layout_above="@+id/intro_footer">
	    
		<RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:scrollbarAlwaysDrawVerticalTrack="true">
	
			<TextView
				android:id="@+id/intro_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/dark_gray_1"
				android:layout_margin="5dip" />
			
			<TextView
		       	android:id="@+id/setup_intro_phone_missing_text"
		       	android:layout_width="fill_parent"
		       	android:layout_height="wrap_content"
		       	android:text="@string/setup_complete_phone_missing_text"
		        android:textColor="@color/red_1"
		        android:layout_below="@+id/intro_text"
		        android:layout_margin="5dip"/>
		        	
			<EditText android:id="@+id/setup_intro_edit_phone"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/setup_complete_edit_phone_example"
				android:layout_below="@+id/setup_intro_phone_missing_text"
				android:imeOptions="actionDone"
				style="@style/edit_text" />	
			
		</RelativeLayout>
	</ScrollView>
	
	<LinearLayout
	    android:id="@+id/intro_footer"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="#FF707070">
	 
	    <Button
	        android:id="@+id/intro_exit"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
	        android:drawableLeft="@drawable/ic_btn_back"
	        android:text="@string/intro_exit"
	        android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
	
	    <Button
	        android:id="@+id/intro_next"
	       	android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
	        android:drawableRight="@drawable/ic_btn_next"
	        android:text="@string/setup_next"
	        android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
	            
	</LinearLayout>
</RelativeLayout>