<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	
	<FrameLayout
		android:id="@+id/gdi_header"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/gdi_arrow_up"
		android:layout_marginTop="-1px"
		android:background="@drawable/gd_quick_action_top_frame" />
	
	<LinearLayout
        android:id="@+id/send_write_mid"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/gdi_header"
	    android:background="@color/dark_gray">
		
    	<EditText 
			android:id="@+id/send_edittext_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/edit_title_text_default"
	        android:imeOptions="actionDone"
	        android:theme="@android:style/Theme.Translucent"
			style="@style/edit_text" />	
		
		<EditText 
			android:id="@+id/send_edittext_desc"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/edit_desc_text_default"
			android:imeOptions="actionDone"
			android:theme="@android:style/Theme.Translucent"
			style="@style/edit_text" />
	</LinearLayout>

	<LinearLayout
        android:id="@+id/send_write_footer"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/send_write_mid"
	    android:background="@color/dark_gray">

		<Button
	    	android:id="@+id/send_write_cancel_btn"
	    	android:layout_marginTop="1px"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
			android:text="@string/comment_cancel_text"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

		<Button
	    	android:id="@+id/send_write_ok_btn"
	    	android:layout_marginTop="1px"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
			android:text="@string/comment_ok_text"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
            
    </LinearLayout>

	<FrameLayout
		android:id="@+id/gdi_footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/send_write_footer"
		android:background="@drawable/gd_quick_action_grid_bottom_frame" />

	<ImageView
		android:id="@+id/gdi_arrow_up"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/gd_quick_action_arrow_up" />

	<ImageView
		android:id="@+id/gdi_arrow_down"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/gdi_footer"
		android:layout_marginTop="-1px"
		android:src="@drawable/gd_quick_action_grid_arrow_down" />

</RelativeLayout>
