<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center" android:padding="10dp"
	>

	<!-- TextView android:id="@+id/app_top_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10px"
		android:layout_marginBottom="15px" 
		style="@style/label_top"
		android:text="@string/edit_top_label" /-->
 
    <Button android:id="@+id/app_snap_button"  
        android:layout_width="fill_parent" 
        android:layout_height="65dp"      
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableTop="@drawable/snap"
        android:background="@color/rosy_brown"
        android:text="@string/snap_button_label" />
    
    <Button android:id="@+id/app_pick_button"  
        android:layout_width="fill_parent" 
        android:layout_height="65dp"      
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/app_snap_button"
        android:drawableTop="@drawable/pick"
        android:background="@color/light_orange"
        android:text="@string/pick_button_label" />
 	
    <Button android:id="@+id/app_show_geattetab_btn"  
        android:layout_width="fill_parent" 
        android:layout_height="65dp"      
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/app_pick_button"
        android:drawableTop="@drawable/tabs"
        android:background="@color/slate_gray"
        android:text="@string/show_geattetab" />

    <Button android:id="@+id/app_show_all_feedback_btn"  
        android:layout_width="fill_parent" 
        android:layout_height="65dp"      
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/app_show_geattetab_btn"
        android:drawableTop="@drawable/feedbacks"
        android:background="@color/light_blue"
        android:text="@string/show_all_feedbacks" />
    
    <!--Button android:id="@+id/app_register_btn"  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"      
        android:layout_marginLeft="10px" 
        android:layout_marginBottom="5px"
        android:layout_below="@id/app_show_geattetab_btn"
        android:text="@string/register" />

    <ProgressBar android:id="@+id/app_register_prog_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_register_btn"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="0dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:visibility="invisible"/>
        
    <TextView
        android:id="@+id/app_register_prog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_progress_text_conn"
        android:textColor="#A0A0A0"
        android:layout_below="@id/app_register_prog_bar"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="10dip"
        android:visibility="invisible"/-->

</RelativeLayout>
