<?xml version="1.0" encoding="utf-8"?>
<greendroid.widget.ActionBarHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:greendroid="http://schemas.android.com/apk/res/com.geatte.android.app"
	android:id="@id/gd_action_bar_host"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<!--
		Layout height/width and background are set here. This is a hack to
		apply a default style to the ActionBar. Indeed, no style can be
		applied to a LinearLayout
	-->
	<greendroid.widget.ActionBar
		xmlns:actionBar="http://schemas.android.com/apk/res/com.geatte.android.app"
		android:id="@id/gd_action_bar"
		android:layout_height="@dimen/gd_action_bar_height"
		android:layout_width="fill_parent"
		android:background="?attr/gdActionBarBackground" />

    <FrameLayout
		android:id="@id/gd_action_bar_content_view"
		android:layout_height="0dp"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:background="@android:color/white" >

		<ImageView
			android:id="@+id/edit_img"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:scaleType="centerInside"/>

	</FrameLayout>
	
	<LinearLayout
 		android:id="@+id/edit_footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="1dp">

		<Button
			android:id="@+id/send_to_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableLeft="@drawable/send_contact"
			android:text="@string/send_to_text"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

		<Button
			android:id="@+id/send_write_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableLeft="@drawable/send_write"
			android:text="@string/send_write_text"
			android:onClick="onWrite"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />

		<Button
	    	android:id="@+id/send_geatte_button"
            android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
			android:drawableLeft="@drawable/send_upload"
			android:text="@string/send_geatte_text"
			android:background="@drawable/custom_button_2"
			android:textColor="@color/Button_Type_0_Text" />
            
    </LinearLayout>

</greendroid.widget.ActionBarHost>
